# NoctisPro

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .ngrok.env.example  DEPLOYMENT_PRODUCTION_DOCKER.md  DEPLOY_AWS_CLOUDFLARE.md  Dockerfile  RECOVERY.md  db.sqlite3  deploy-docker.sh  deploy-production.sh  deploy.sh  deploy_docker.sh  dicom_receiver.py  docker-compose.prod.yml  docker-compose.yml  manage.py  ngrok-entrypoint.sh  requirements.docker.txt  requirements.optimized.txt  requirements.server.txt  requirements.txt  requirements_security.txt
accounts/: admin.py  apps.py  audit.py  models.py  signals.py  urls.py  views.py
admin_panel/: context_processors.py  forms.py  models.py  urls.py  utils.py  views.py  views_permissions.py
ai_analysis/: apps.py  dicom_sr.py  inference.py  llm_reporting.py  models.py  reporting.py  signals.py  tasks.py  urls.py  utils.py  views.py
chat/: consumers.py  models.py  routing.py  urls.py  views.py
config/: admin_capabilities.json
dicom_processing_service/: main.py
dicom_viewer/: admin.py  api_cpp.py  apps.py  bone_ml.py  dicom_utils.py  dicomweb_urls.py  dicomweb_views.py  masterpiece_utils.py  models.py  preprocess.py  reconstruction.py  signals.py  tasks.py  urls.py  views.py
docker/: entrypoint-wait-for-db.sh  entrypoint-web.sh
docs/: dicom_refactor_plan.md
noctis_pro/: __init__.py  asgi.py  celery.py  fastapi_image_app.py  health.py  (+10 more)
rust/noctis_dicom_core/: Cargo.toml
rust/noctis_dicom_core/src/: lib.rs
rust/noctis_dicom_receiver/: Cargo.toml
rust/noctis_dicom_receiver/src/: main.rs
(+186 files in other folders)
