[package]
name = "noctis_dicom_receiver"
version = "0.1.0"
edition = "2021"
description = "Rust DIMSE receiver that forwards events to the FastAPI gateway"
license = "Proprietary"

[dependencies]
anyhow = "1"
dicom-object = "0.8"
dicom-ul = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
